[sc-7467] don't translate Knowledge Box and capitalize it everywhere

--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -2,7 +2,7 @@
 	"account.account_name_invalid": "Ungültiger Kontoname",
 	"account.accumulated_consumption": "Kumulierter Tagesverbrauch nach Funktion",
 	"account.active_config": "Aktive Konfiguration",
-	"account.add_stash": "Wissensbox hinzufügen",
+	"account.add_stash": "Knowledge Box hinzufügen",
 	"account.add_user": "Nutzer hinzufügen",
 	"account.admin.make_admin": "Administrator erstellen",
 	"account.admin.warning": "Wenn Sie diesem Benutzer die Administratorrolle zuweisen, kann er auf alle Optionen zugreifen und diese bearbeiten.",
@@ -32,8 +32,8 @@
 	"account.delete_account_confirm_title": "Konto löschen?",
 	"account.delete_account_warning_1": "Durch das Löschen des Kontos {{account}} werden alle vorhandenen Daten gelöscht",
 	"account.delete_account_warning_2": "das Konto sowie etwaige Konfigurationsdaten, Benutzer- und Rollenzuweisungen",
-	"account.delete_account_warning_3": "jede Wissensbox und alle ihre Daten. Einschließlich der in NucliaDB indizierten Daten",
-	"account.delete_account_warning_4": "jedes trainierte Modell einer beliebigen Wissensbox",
+	"account.delete_account_warning_3": "jede Knowledge Box und alle ihre Daten. Einschließlich der in NucliaDB indizierten Daten",
+	"account.delete_account_warning_4": "jedes trainierte Modell einer beliebigen Knowledge Box",
 	"account.delete_user": "Benutzer löschen?",
 	"account.delete_user_confirm": "Möchten Sie Ihren Benutzer und den Zugang zu Nuclia löschen?",
 	"account.delete_user_warning": "Möchten Sie den Benutzer {{ username }}wirklich löschen?",
@@ -51,7 +51,7 @@
 	"account.home": "Benutzerkonto Übersicht",
 	"account.invited_user": "Wir haben eine Einladungs-E-Mail an {{user}} gesendet, um diesem Konto beizutreten",
 	"account.kb-description": "Eine Knowledge Box ist eine Sammlung von Inhalten, nach denen Nuclia sucht. Einige Suchmaschinen nennen es „Index“ oder „Korpus“. In den meisten Fällen benötigen Sie für Ihre Bewerbung nur eine Knowledge Box.",
-	"account.knowledgeboxes": "Wissensboxen",
+	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Lizenz",
 	"account.logo": "Boxbild",
 	"account.logotip": "Logo",
@@ -61,7 +61,7 @@
 	"account.new_token": "Neues Token",
 	"account.nua_client": "Kundenname",
 	"account.nua_key_activity": "NU-API-Schlüsselaktivitätsprotokoll",
-	"account.nua_key_activity_subtitle": "Wissensbox-Aktivität der letzten 30 Tage",
+	"account.nua_key_activity_subtitle": "Knowledge Box-Aktivität der letzten 30 Tage",
 	"account.nua_key_activity_title": "{{key}} Aktivitätsprotokoll",
 	"account.nua_key_delete": "Löschen Sie den Nuclia Understanding API-Schlüssel",
 	"account.nua_key_delete_warning": "Durch das Löschen dieses Schlüssels gehen alle laufenden Jobs verloren.",
@@ -69,12 +69,12 @@
 	"account.nua_webhook": "Webhook-URL",
 	"account.nua_webhook_help": "Sobald Ihre Daten verarbeitet sind, wird das Ergebnis unter dieser URL veröffentlicht",
 	"account.public": "Öffentlichkeit",
-	"account.related_kbs": "Wissensboxen des Kontos",
+	"account.related_kbs": "Knowledge Boxes des Kontos",
 	"account.replace_config": "Einstellungen ersetzen",
 	"account.settings": "Kontoverwaltung",
 	"account.speech_to_text": "Speech-to-Text",
 	"account.speech_to_text_description": "Nuclia bietet erweiterte Speech-to-Text-Modelle. Die Verwendung dieser Modelle erfordert mehr Rechenaufwand und damit verbundene zusätzliche Kosten. Aktivieren Sie das folgende Kontrollkästchen, wenn Sie die erweiterten Modelle verwenden möchten.",
-	"account.stash.add": "Wissensbox hinzufügen",
+	"account.stash.add": "Knowledge Box hinzufügen",
 	"account.stash.delete": "Löschen",
 	"account.stash.edit": "Einstellungen bearbeiten",
 	"account.stash.publish": "Veröffentlichen",
@@ -112,7 +112,6 @@
 	"activity.processed": "Verarbeitet",
 	"activity.resource": "Ressource",
 	"activity.search": "Abfragen",
-	"activity.subtitle": "Wissensbox-Aktivität der letzten 30 Tage",
 	"activity.timestamp": "Zeitstempel",
 	"autocomplete.section.main": "Vorschlag für ein Schlüsselkonzept",
 	"autocomplete.section.next_words": "Vorgeschlagene Wörter",
@@ -201,7 +200,7 @@
 	"billing.quotas.files-up-to": "Dateien bis zu",
 	"billing.quotas.generative": "Generative Antwort",
 	"billing.quotas.ingestion": "Einnahme",
-	"billing.quotas.kbs": "Anzahl der Wissensboxen",
+	"billing.quotas.kbs": "Anzahl der Knowledge Boxes",
 	"billing.quotas.media": "Video- und Audioindizierung",
 	"billing.quotas.paragraphs": "Absatz gespeichert",
 	"billing.quotas.paragraphs_processed": "Anzahl des Absatzes",
@@ -271,7 +270,7 @@
 	"empty.title": "Keine Ergebnisse.",
 	"entities.law": "Rechtliches",
 	"entities.quantity": "Mengen und Maße",
-	"error.creating-kb": "Beim Erstellen der Wissensbox ist ein Fehler aufgetreten",
+	"error.creating-kb": "Beim Erstellen der Knowledge Box ist ein Fehler aufgetreten",
 	"error.deleting-resource": "Das Löschen der Ressource ist fehlgeschlagen",
 	"error.deleting-resources": "Das Löschen von {{count}} Ressourcen ist fehlgeschlagen",
 	"error.reprocessing-resource": "Die erneute Verarbeitung der Ressource ist fehlgeschlagen",
@@ -523,7 +522,7 @@
 	"resource.confirm-reprocess.plural-title": "Sind Sie sicher, dass Sie die Ressourcen erneut verarbeiten möchten?",
 	"resource.confirm-reprocess.title": "Sind Sie sicher, dass Sie die Ressource erneut verarbeiten möchten?",
 	"resource.description.title": "Beschreibung",
-	"resource.empty": "In Ihrer Wissensbox befinden sich derzeit keine Inhalte.",
+	"resource.empty": "In Ihrer Knowledge Box befinden sich derzeit keine Inhalte.",
 	"resource.empty_import": "Beginnen Sie sofort mit der Nutzung von Nuclia, indem Sie einen Beispieldatensatz auswählen. Dies ist der schnellste Weg, um loszulegen und zu erkunden, wie Nuclia funktioniert.",
 	"resource.entities.date": "Datum",
 	"resource.entities.event": "Veranstaltungen",
@@ -652,19 +651,19 @@
 	"stash.config.option.palm": "Google PaLM 2 (Beta)",
 	"stash.config.own_key": "Eigenen Schlüssel verwenden",
 	"stash.config.success": "Die neuen Einstellungen wurden erfolgreich gespeichert.",
-	"stash.confirm_delete_user.description": "Sie können diese Aktion nur rückgängig machen, indem Sie sie erneut einladen, sich Ihrer Wissensbox anzuschließen.",
+	"stash.confirm_delete_user.description": "Sie können diese Aktion nur rückgängig machen, indem Sie sie erneut einladen, sich Ihrer Knowledge Box anzuschließen.",
 	"stash.confirm_delete_user.title": "Sind Sie sicher, dass Sie diesen Benutzer löschen möchten?",
-	"stash.contact_admin": "Sie sind nicht berechtigt, eine Wissensbox zu erstellen. Kontaktieren Sie Ihren Administrator.",
+	"stash.contact_admin": "Sie sind nicht berechtigt, eine Knowledge Box zu erstellen. Kontaktieren Sie Ihren Administrator.",
 	"stash.create.anonymization_model.help": "Wenden Sie die mit der Datenschutz-Grundverordnung (DSGVO) konforme Anonymisierung auf alle Ressourcen in der Knowledge Box an",
 	"stash.create.anonymization_model.label": "Anonymisierung",
-	"stash.create.error": "Beim Erstellen der Wissensbox ist ein Fehler aufgetreten. Bitte versuche es erneut.",
+	"stash.create.error": "Beim Erstellen der Knowledge Box ist ein Fehler aufgetreten. Bitte versuche es erneut.",
 	"stash.create.failure": "Im Moment stimmt etwas nicht. Kontaktieren Sie Ihren Administrator.",
 	"stash.create.generative_model.help": "Geben Sie das Modell an, das zum Generieren von Antworten auf Benutzerfragen verwendet wird.",
 	"stash.create.generative_model.label": "Antwortgenerierung",
-	"stash.create.in_progress": "Erstellung der Wissensbox läuft…",
+	"stash.create.in_progress": "Erstellung der Knowledge Box läuft…",
 	"stash.create.semantic_model.help": "Geben Sie die Sprachen an, die in den Informationen verwendet werden, die Sie in Ihre KB hochladen.",
 	"stash.create.semantic_model.label": "Sprachen",
-	"stash.create.title": "Erstellen Sie eine Wissensbox",
+	"stash.create.title": "Erstellen Sie eine Knowledge Box",
 	"stash.create.user_prompts.examples": "Beispiele",
 	"stash.create.user_prompts.prompt": "Benutzerdefinierte Eingabeaufforderung",
 	"stash.create.user_prompts.prompt_help": "Definiert die Art und Weise, wie sich das System verhalten soll, wenn wir eine Frage stellen. Hier können wir spezifischere Regeln definieren, die sogar das definierte Verhalten außer Kraft setzen können. Beispielsweise könnten wir eine Eingabeaufforderung einrichten, die dafür sorgt, dass das System Ergebnisse nur in Listen ausgibt oder sogar um eine Antwort in einer bestimmten Sprache bittet.",
@@ -672,48 +671,43 @@
 	"stash.create.user_prompts.system_help": "Definiert allgemeine Persönlichkeitsmerkmale des Assistenten oder darüber, wie er sich bei der Beantwortung von Fragen/während eines Gesprächs verhalten soll. Beispielsweise könnten wir definieren, dass das System als Gesundheitsexperte antwortet.",
 	"stash.create.visual_labeling.help": "Ermöglicht die visuelle Auswahl einiger Teile des Dokumentlayouts und deren Kommentierung.",
 	"stash.create.visual_labeling.label": "Kommentieren Sie nach Auswahl",
-	"stash.create.zone_description": "Wählen Sie die Zone und den Verarbeitungsanbieter aus, den Sie für diese Wissensbox verwenden möchten (standardmäßig die Zone des Kontos).",
+	"stash.create.zone_description": "Wählen Sie die Zone und den Verarbeitungsanbieter aus, den Sie für diese Knowledge Box verwenden möchten (standardmäßig die Zone des Kontos).",
 	"stash.create_service_access": "Erstellen Sie einen neuen Servicezugriff",
-	"stash.delete.delete": "Wissensbox löschen?",
-	"stash.delete.error": "Fehler beim Erstellen der Wissensbox",
-	"stash.delete.warning": "Wenn Sie die Wissensbox {{ kb }}löschen, werden auch alle Daten gelöscht",
-	"stash.delete_stash": "Wissensbox löschen",
-	"stash.delete_stash_data": "Löschen Sie die Wissensbox und alle darin enthaltenen Daten",
+	"stash.delete.delete": "Knowledge Box löschen?",
+	"stash.delete.error": "Fehler beim Erstellen der Knowledge Box",
+	"stash.delete.warning": "Wenn Sie die Knowledge Box {{ kb }}löschen, werden auch alle Daten gelöscht",
 	"stash.description": "Beschreibung",
 	"stash.email": "E-Mail-Server",
-	"stash.empty_kb": "Die Wissensbox ist leer",
+	"stash.empty_kb": "Die Knowledge Box ist leer",
 	"stash.enable_stash_email": "E-Mail aktivieren",
 	"stash.home.link": "Start-Dashboard",
 	"stash.home.upload-block.description": "Laden Sie Dateien, Ordner und Links hoch",
 	"stash.home.upload-block.description-desktop": " oder wählen Sie eine Quelle, um mit Nuclia mit Ihrer eigenen Datenbank zu arbeiten.",
 	"stash.home.upload-block.title": "Arbeiten Sie mit Ihren Daten",
-	"stash.invited_user": "Wir haben eine Einladungs-E-Mail an {{user}} gesendet, um dieser Wissensbox beizutreten.",
-	"stash.kb_name_invalid": "Ungültiger Name der Wissensbox",
+	"stash.invited_user": "Wir haben eine Einladungs-E-Mail an {{user}} gesendet, um dieser Knowledge Box beizutreten.",
+	"stash.kb_name_invalid": "Ungültiger Name der Knowledge Box",
 	"stash.kb_slug_invalid": "Ungültiger Knowledge-Box-Slug",
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Benutzer verwalten",
-	"stash.name": "Name der Wissensbox",
+	"stash.name": "Name der Knowledge Box",
 	"stash.name_your_kb": "Benennen Sie Ihre KB",
 	"stash.new_service_access_token": "Erstellen Sie ein neues Token",
-	"stash.no_knowledge_boxes": "In diesem Konto sind keine Wissensboxen vorhanden",
+	"stash.no_knowledge_boxes": "In diesem Konto sind keine Knowledge Boxes vorhanden",
 	"stash.preferences.receive_help": "Hilfe erhalten",
 	"stash.preferences.receiving_emails": "E-Mail Einstellungen",
 	"stash.profile": "Die Einstellungen",
-	"stash.publish.confirm": "Die Veröffentlichung einer Wissensbox bedeutet, dass sie für jeden auf der Welt zugänglich ist. Es könnte von öffentlichen Suchmaschinen wie Google indiziert werden.",
+	"stash.publish.confirm": "Die Veröffentlichung einer Knowledge Box bedeutet, dass sie für jeden auf der Welt zugänglich ist. Es könnte von öffentlichen Suchmaschinen wie Google indiziert werden.",
 	"stash.publish.error": "Fehler beim Veröffentlichen der Knowledge Box",
-	"stash.publish.publish": "Wissensbox veröffentlichen",
-	"stash.publish.title": "Wissensbox veröffentlichen",
-	"stash.publish.warning": "Wenn Sie die Wissensbox „{{ kb }}“ veröffentlichen, sind alle darin enthaltenen Informationen öffentlich.",
-	"stash.retire.error": "Fehler beim Aufheben der Veröffentlichung der Wissensbox",
-	"stash.retire.retire": "Machen Sie die Wissensbox privat",
-	"stash.retire.warning": "Wenn Sie die Veröffentlichung der Wissensbox „{{ kb }}“ aufheben, werden alle darin enthaltenen Informationen privat.",
+	"stash.publish.title": "Knowledge Box veröffentlichen",
+	"stash.publish.warning": "Wenn Sie die Knowledge Box „{{ kb }}“ veröffentlichen, sind alle darin enthaltenen Informationen öffentlich.",
+	"stash.retire.error": "Fehler beim Aufheben der Veröffentlichung der Knowledge Box",
+	"stash.retire.warning": "Wenn Sie die Veröffentlichung der Knowledge Box „{{ kb }}“ aufheben, werden alle darin enthaltenen Informationen privat.",
 	"stash.search": "Suche",
 	"stash.search-toggle-answer": "Generative Antwort",
 	"stash.search_users": "Fügen Sie einen neuen Benutzer hinzu",
 	"stash.search_users_add": "Möchten Sie diesen Benutzer wirklich zum Konto hinzufügen?",
 	"stash.seats_available": "{{ seats }} Plätze verfügbar",
 	"stash.see_stats": "Siehe Daten",
-	"stash.selectStash": "Wählen Sie eine Wissensbox aus",
 	"stash.service_access": "Servicezugang",
 	"stash.service_access_description": "Wichtig! Kopieren und speichern Sie den Token-Code. Es verschwindet, sobald es hinzugefügt wurde.",
 	"stash.settings.processes.classifier": "Schulung zur Label-Suchabsicht",
@@ -729,7 +723,7 @@
 	"stash.settings.processes.training.consult-history": "Sehen Sie sich alle Daten und den Status der abgeschlossenen oder laufenden Schulungen an",
 	"stash.settings.processes.training.last_run": "Letzte Ausführung: {{ runDate }}",
 	"stash.settings.processes.training.ner.contact": "Abhängig von Ihrem Datensatz ist dieses Training möglicherweise nicht effektiv. Um zu beurteilen, ob eine NER-Schulung in Ihrem Fall relevant ist, <a href=\"mailto:{{email}}\">kontaktieren Sie uns bitte</a>.",
-	"stash.settings.processes.training.no-resources": "Die Trainingsfunktion ist bei leeren Wissensboxen nicht verfügbar.",
+	"stash.settings.processes.training.no-resources": "Die Trainingsfunktion ist bei leeren Knowledge Boxes nicht verfügbar.",
 	"stash.settings.processes.training.not-allowed": "Die Trainingsfunktion ist für Basiskonten nicht verfügbar.",
 	"stash.settings.processes.training.select-entities": "Wählen Sie Entitätsgruppen aus",
 	"stash.settings.processes.training.select-labelset": "Wählen Sie ein Etikettenset",
@@ -826,8 +820,8 @@
 	"stash.widgets.targetNewTab.help": "In neuem Tab öffnen",
 	"stash.widgets.targetNewTab.label": "Ziel: Neuer Tab",
 	"stash.widgets.title": "Such-Widget-Generator",
-	"stash.widgets.warning": "Damit das Widget ordnungsgemäß funktioniert, muss die Wissensbox <strong>öffentlich sein</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Gefahrenzone! Damit dieses Widget mit einer privaten Wissensbox funktioniert, müssen Sie ein API-Token bereitstellen.",
+	"stash.widgets.warning": "Damit das Widget ordnungsgemäß funktioniert, muss die Knowledge Box <strong>öffentlich sein</strong>.",
+	"stash.widgets.warning-dangerous-snippet": "Gefahrenzone! Damit dieses Widget mit einer privaten Knowledge Box funktioniert, müssen Sie ein API-Token bereitstellen.",
 	"stash.widgets.warning-dangerous-snippet-details": "Verwenden Sie dieses Snippet nicht auf einer öffentlichen Website.",
 	"stats.endpoint": "NucliaDB-API-Endpunkt",
 	"stats.get_started": "Loslegen",
@@ -886,7 +880,7 @@
 	"upload.toast.successful": "Hochladen erfolgreich",
 	"upload.upload_from_csv": "Fügen Sie Ressourcen aus CSV hinzu",
 	"upload.uploading_files": "<strong>Dateien hochladen.</strong> Sie können Nuclia in der Zwischenzeit gerne nutzen",
-	"upload.use_folder_as_labels.help": "Der Ordner der ersten Ebene ist der Name des Etikettensatzes, Unterordner sind Etiketten. Wenn Unterordner verschachtelt sind, erhalten Dateien mehrere Bezeichnungen. Beschriftungen werden automatisch erstellt, wenn sie noch nicht in der Wissensbox definiert sind.",
+	"upload.use_folder_as_labels.help": "Der Ordner der ersten Ebene ist der Name des Etikettensatzes, Unterordner sind Etiketten. Wenn Unterordner verschachtelt sind, erhalten Dateien mehrere Bezeichnungen. Beschriftungen werden automatisch erstellt, wenn sie noch nicht in der Knowledge Box definiert sind.",
 	"upload.use_folder_as_labels.label": "Verwenden Sie Ordnernamen als Labelnamen",
 	"user.logout": "Ausloggen",
 	"validation.name_required": "Fügen Sie Ihren Vor- und Nachnamen hinzu",
