--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -2,7 +2,7 @@
 	"account.account_name_invalid": "El nombre de la cuenta no es válido",
 	"account.accumulated_consumption": "Consumo diario acumulado por funcionalidad",
 	"account.active_config": "Configuración activa",
-	"account.add_stash": "Añadir caja de conocimiento",
+	"account.add_stash": "Añadir Knowledge Box",
 	"account.add_user": "Añadir usuario",
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
@@ -32,8 +32,8 @@
 	"account.delete_account_confirm_title": "Eliminar la cuenta?",
 	"account.delete_account_warning_1": "Eliminar la cuenta {{account}} eliminará todos los datos existentes",
 	"account.delete_account_warning_2": "la cuenta y cualquier dato de configuración, usuarios y asignación de roles.",
-	"account.delete_account_warning_3": "cualquier cuadro de conocimiento y todos sus datos. Incluyendo datos indexados en NucliaDB",
-	"account.delete_account_warning_4": "cualquier modelo entrenado de cualquier caja de conocimiento",
+	"account.delete_account_warning_3": "cualquier Knowledge Box y todos sus datos. Incluyendo datos indexados en NucliaDB",
+	"account.delete_account_warning_4": "cualquier modelo entrenado de cualquier Knowledge Box",
 	"account.delete_user": "¿Eliminar usuario?",
 	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
@@ -51,7 +51,7 @@
 	"account.home": "Panel de cuenta",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
 	"account.kb-description": "Una caja de conocimiento es una colección de contenido en la que Nuclia busca. Algunos motores de búsqueda lo llaman \"índice\" o \"corpus\". En la mayoría de los casos, solo necesita un Knowledge Box para su aplicación.",
-	"account.knowledgeboxes": "Cajas de conocimiento",
+	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Licencia",
 	"account.logo": "Imagen de la caja",
 	"account.logotip": "Logotipo",
@@ -61,7 +61,7 @@
 	"account.new_token": "Nuevo Token",
 	"account.nua_client": "Nombre del cliente",
 	"account.nua_key_activity": "Registro de actividad",
-	"account.nua_key_activity_subtitle": "TODO",
+	"account.nua_key_activity_subtitle": "Actividad del Knowledge Box de los últimos 30 días",
 	"account.nua_key_activity_title": "{{key}} registro de actividad",
 	"account.nua_key_delete": "Eliminar la clave de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Al eliminar esta clave, se perderán todos los trabajos en curso (si los hay).",
@@ -69,11 +69,11 @@
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook_help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
 	"account.public": "Público",
-	"account.related_kbs": "Cajas de conocimiento de la cuenta",
+	"account.related_kbs": "Knowledge Boxes de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
 	"account.settings": "Gestión de la cuenta",
 	"account.speech_to_text_description": "Nuclia ofrece modelos mejorados de voz a texto. El uso de estos modelos requiere un cómputo mayor y tienen un costo extra. Marque la siguiente casilla de verificación si desea utilizar los modelos mejorados.",
-	"account.stash.add": "Añadir caja de conocimiento",
+	"account.stash.add": "Añadir Knowledge Box",
 	"account.stash.delete": "Borrar",
 	"account.stash.edit": "Editar preferencias",
 	"account.stash.publish": "Publicar",
@@ -111,7 +111,6 @@
 	"activity.processed": "Procesados",
 	"activity.resource": "Recurso",
 	"activity.search": "Consultas",
-	"activity.subtitle": "Actividad de la Caja de conocimiento de los últimos 30 días",
 	"activity.timestamp": "Sello de tiempo",
 	"autocomplete.section.main": "Palabras clave sugeridas",
 	"autocomplete.section.next_words": "Palabras sugeridas",
@@ -200,7 +199,7 @@
 	"billing.quotas.files-up-to": "Archivos hasta",
 	"billing.quotas.generative": "Respuesta generativa",
 	"billing.quotas.ingestion": "Ingestión",
-	"billing.quotas.kbs": "Número de cajas de conocimiento",
+	"billing.quotas.kbs": "Número de Knowledge Boxes",
 	"billing.quotas.media": "Indexación de video y audio",
 	"billing.quotas.paragraphs": "Parrafos almacenados",
 	"billing.quotas.paragraphs_processed": "Número de parrafos",
@@ -270,7 +269,7 @@
 	"empty.title": "No hemos encontrado ningún resultado :(",
 	"entities.law": "Legal",
 	"entities.quantity": "Cantidades y medidas",
-	"error.creating-kb": "Ocurrió un error al crear el cuadro de conocimiento",
+	"error.creating-kb": "Ocurrió un error al crear el Knowledge Box",
 	"error.deleting-resource": "Error al eliminar el recurso",
 	"error.deleting-resources": "Error al eliminar {{count}} recursos",
 	"error.reprocessing-resource": "Error al reprocesar el recurso",
@@ -522,7 +521,7 @@
 	"resource.confirm-reprocess.plural-title": "¿Está seguro de que desea reprocesar los recursos?",
 	"resource.confirm-reprocess.title": "¿Está seguro de que desea volver a procesar el recurso?",
 	"resource.description.title": "Descripción",
-	"resource.empty": "No hay contenido en su caja de conocimiento en este momento.",
+	"resource.empty": "No hay contenido en su Knowledge Box en este momento.",
 	"resource.empty_import": "Comience a usar Nuclia al instante eligiendo un conjunto de datos de muestra. Esta es la forma más rápida de comenzar y explorar cómo funciona Nuclia.",
 	"resource.entities.date": "Fechas",
 	"resource.entities.event": "Eventos",
@@ -651,19 +650,19 @@
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilizar key propia",
 	"stash.config.success": "La nueva configuración se ha guardado correctamente.",
-	"stash.confirm_delete_user.description": "La única forma de deshacer esta acción es invitandolo de nuevo a unirse a la caja de conocimiento.",
+	"stash.confirm_delete_user.description": "La única forma de deshacer esta acción es invitandolo de nuevo a unirse a la Knowledge Box.",
 	"stash.confirm_delete_user.title": "¿Estás seguro de que deseas eliminar este usuario?",
-	"stash.contact_admin": "No está autorizado para crear un cuadro de conocimiento. Póngase en contacto con su administrador.",
+	"stash.contact_admin": "No está autorizado para crear un Knowledge Box. Póngase en contacto con su administrador.",
 	"stash.create.anonymization_model.help": "Aplicar la anonimización conforme al Reglamento General de Protección de Datos (GDPR) a todos los recursos en el Cuadro de Conocimiento",
 	"stash.create.anonymization_model.label": "Anonimización",
-	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la caja de conocimiento. Por favor vuelve a intentarlo.",
+	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la Knowledge Box. Por favor vuelve a intentarlo.",
 	"stash.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
 	"stash.create.generative_model.help": "Indique el modelo utilizado para generar respuestas a las preguntas de los usuarios.",
 	"stash.create.generative_model.label": "Generación de respuesta",
-	"stash.create.in_progress": "Creación de la caja de conocimiento en curso...",
+	"stash.create.in_progress": "Creación de la Knowledge Box en curso...",
 	"stash.create.semantic_model.help": "Indica los idiomas utilizados en la información que subirás en tu KB.",
 	"stash.create.semantic_model.label": "Idiomas",
-	"stash.create.title": "Crea una caja de conocimiento",
+	"stash.create.title": "Crea una Knowledge Box",
 	"stash.create.user_prompts.examples": "Ejemplos",
 	"stash.create.user_prompts.prompt": "Prompt personalizado",
 	"stash.create.user_prompts.prompt_help": "Define la forma en que queremos que actúe el sistema cuando hacemos una pregunta. Aquí podemos definir reglas más específicas, que incluso podrían anular el comportamiento definido. Por ejemplo, podríamos tener una pregunta que haga que el sistema sólo dé resultados en listas, o incluso que pida responder en un idioma determinado.",
@@ -671,48 +670,43 @@
 	"stash.create.user_prompts.system_help": "Define rasgos generales de la personalidad del asistente, o sobre cómo debe comportarse al responder preguntas/ durante una conversación. Por ejemplo, podríamos definir que el sistema responda como un profesional sanitario.",
 	"stash.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
 	"stash.create.visual_labeling.label": "Anotar por selección",
-	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta caja de conocimiento. De forma predeterminada aparece la zona escogida en el Account",
+	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta Knowledge Box. De forma predeterminada aparece la zona escogida en el Account",
 	"stash.create_service_access": "Crea un nuevo Service Access",
-	"stash.delete.delete": "¿Eliminar caja de conocimiento?",
-	"stash.delete.error": "Error al crear el cuadro de conocimiento",
-	"stash.delete.warning": "Si eliminas la Caja de Conocimiento {{ kb }} también se eliminaran todos los datos que contenga",
-	"stash.delete_stash": "Borrar caja de conocimiento",
-	"stash.delete_stash_data": "Elimina la caja de conocimiento y todos los datos que contiene",
+	"stash.delete.delete": "¿Eliminar Knowledge Box?",
+	"stash.delete.error": "Error al crear el Knowledge Box",
+	"stash.delete.warning": "Si eliminas la Knowledge Box {{ kb }} también se eliminaran todos los datos que contenga",
 	"stash.description": "Descripción",
 	"stash.email": "Servidor de correo",
-	"stash.empty_kb": "!La caja de conocimiento aun está vacía!",
+	"stash.empty_kb": "!La Knowledge Box aun está vacía!",
 	"stash.enable_stash_email": "Habilitar correo electrónico",
 	"stash.home.link": "Panel de inicio",
 	"stash.home.upload-block.description": "Subir archivos, carpetas, enlaces.",
 	"stash.home.upload-block.description-desktop": " o elige una fuente para trabajar con Nuclia con tu propia base de datos.",
 	"stash.home.upload-block.title": "Trabaja con tus datos",
-	"stash.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta caja de conocimiento",
-	"stash.kb_name_invalid": "El nombre de la caja de conocimiento no es válido",
+	"stash.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta Knowledge Box",
+	"stash.kb_name_invalid": "El nombre de la Knowledge Box no es válido",
 	"stash.kb_slug_invalid": "El slug de la caja de conocimiento no es válido",
 	"stash.logotip": "Logotipo",
 	"stash.manage_users": "Gestionar usuarios",
-	"stash.name": "Nombre de la Caja",
+	"stash.name": "Nombre de la Knowledge Box",
 	"stash.name_your_kb": "Nombra tu base de conocimiento",
 	"stash.new_service_access_token": "Crear un nuevo token",
-	"stash.no_knowledge_boxes": "No hay cajas de conocimiento en esta cuenta.",
+	"stash.no_knowledge_boxes": "No hay Knowledge Boxes en esta cuenta.",
 	"stash.preferences.receive_help": "Recibir ayuda",
 	"stash.preferences.receiving_emails": "Preferencias del correo electrónico",
 	"stash.profile": "Ajustes",
-	"stash.publish.confirm": "Publicar una caja de conocimiento significa que será accesible para cualquier persona en el mundo. También significa que podría ser indexada por motores de búsqueda públicos como Google.",
+	"stash.publish.confirm": "Publicar una Knowledge Box significa que será accesible para cualquier persona en el mundo. También significa que podría ser indexada por motores de búsqueda públicos como Google.",
 	"stash.publish.error": "Error al publicar el Knowledge Box",
-	"stash.publish.publish": "Publicar la Caja de Conocimiento",
-	"stash.publish.title": "Publicar la caja de conocimiento",
-	"stash.publish.warning": "Si publicas la Caja de Conocimiento \"{{ kb }}\" toda la información que contiene se hará pública.",
+	"stash.publish.title": "Publicar la Knowledge Box",
+	"stash.publish.warning": "Si publicas la Knowledge Box \"{{ kb }}\" toda la información que contiene se hará pública.",
 	"stash.retire.error": "Error al despublicar el Knowledge Box",
-	"stash.retire.retire": "Hacer privada la Caja de Conocimiento",
-	"stash.retire.warning": "Si despublicas la Caja de Conocimiento \"{{ kb }}\", toda la información que contiene será privada. ",
+	"stash.retire.warning": "Si despublicas la Knowledge Box \"{{ kb }}\", toda la información que contiene será privada. ",
 	"stash.search": "Busca",
 	"stash.search-toggle-answer": "Respuesta generativa",
 	"stash.search_users": "Añadir un nuevo usuario",
 	"stash.search_users_add": "¿Quieres añadir el usuario a la cuenta?",
 	"stash.seats_available": "Quedan {{ seats }} asientos",
 	"stash.see_stats": "Ver los datos",
-	"stash.selectStash": "Selecciona una caja de conocimiento",
 	"stash.service_access": "Service Access",
 	"stash.service_access_description": "¡Importante! Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
 	"stash.settings.processes.classifier": "Capacitación de intención de búsqueda de etiquetas",
@@ -728,7 +722,7 @@
 	"stash.settings.processes.training.consult-history": "Consulta todos los datos y el estado de los entrenamientos realizados o en curso",
 	"stash.settings.processes.training.last_run": "Última ejecución: {{ runDate }}",
 	"stash.settings.processes.training.ner.contact": "Dependiendo de su conjunto de datos, esta capacitación podría no ser efectiva. Para evaluar si la formación de NER es relevante en su caso, <a href=\"mailto:{{email}}\">póngase en contacto con nosotros</a>.",
-	"stash.settings.processes.training.no-resources": "Los entrenamientos no están disponibles en cajas de conocimiento vacías.",
+	"stash.settings.processes.training.no-resources": "Los entrenamientos no están disponibles en Knowledge Boxes vacías.",
 	"stash.settings.processes.training.not-allowed": "Los entrenamientos no están disponibles en las cuentas básicas.",
 	"stash.settings.processes.training.select-entities": "Escoger grupo de entidades",
 	"stash.settings.processes.training.select-labelset": "Elija un conjunto de etiquetas",
@@ -825,8 +819,8 @@
 	"stash.widgets.targetNewTab.help": "Abrir en una pestaña nueva",
 	"stash.widgets.targetNewTab.label": "Apuntar a nueva pestaña",
 	"stash.widgets.title": "Generador de widgets de búsqueda",
-	"stash.widgets.warning": "Para que el widget funcione correctamente, el cuadro de conocimiento <strong>debe ser público</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "¡Zona peligrosa! Para que este widget funcione con un cuadro de conocimiento privado, debe proporcionar un token de API.",
+	"stash.widgets.warning": "Para que el widget funcione correctamente, el Knowledge Box <strong>debe ser público</strong>.",
+	"stash.widgets.warning-dangerous-snippet": "¡Zona peligrosa! Para que este widget funcione con un Knowledge Box privado, debe proporcionar un token de API.",
 	"stash.widgets.warning-dangerous-snippet-details": "No utilice este fragmento en un sitio web público.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Empezar",
@@ -885,7 +879,7 @@
 	"upload.toast.successful": "Subida exitosa",
 	"upload.upload_from_csv": "Añadir recursos desde CSV",
 	"upload.uploading_files": "<strong>Subiendo archivos.</strong> Siéntase libre de usar Nuclia mientras tanto",
-	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
+	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la Knowledge Box.",
 	"upload.use_folder_as_labels.label": "Usar nombres de carpetas como etiquetas",
 	"user.logout": "Salir",
 	"validation.name_required": "Añade tu nombre y apellidos",
