--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -2,7 +2,7 @@
 	"account.account_name_invalid": "Nome da conta inválido",
 	"account.accumulated_consumption": "Consumo diário acumulado por funcionalidade",
 	"account.active_config": "Configuração ativa",
-	"account.add_stash": "Adicionar caixa de conhecimento",
+	"account.add_stash": "Adicionar Knowledge Box",
 	"account.add_user": "Adicionar usuário",
 	"account.admin.make_admin": "Tornar administrador",
 	"account.admin.warning": "Se você atribuir a função de administrador a esse usuário, ele poderá acessar e editar todas as opções.",
@@ -32,8 +32,8 @@
 	"account.delete_account_confirm_title": "Excluir a conta?",
 	"account.delete_account_warning_1": "Excluir a conta {{account}} excluirá todos os dados existentes",
 	"account.delete_account_warning_2": "a conta e quaisquer dados de configuração, usuários e atribuição de funções",
-	"account.delete_account_warning_3": "qualquer caixa de conhecimento e todos os seus dados. Incluindo dados indexados no NucliaDB",
-	"account.delete_account_warning_4": "qualquer modelo treinado de qualquer caixa de conhecimento",
+	"account.delete_account_warning_3": "qualquer Knowledge Box e todos os seus dados. Incluindo dados indexados no NucliaDB",
+	"account.delete_account_warning_4": "qualquer modelo treinado de qualquer Knowledge Box",
 	"account.delete_user": "Deletar usuário?",
 	"account.delete_user_confirm": "Deseja excluir seu usuário e o acesso ao Nuclia?",
 	"account.delete_user_warning": "Tem certeza de que deseja excluir o usuário {{ username }}?",
@@ -51,7 +51,7 @@
 	"account.home": "Painel de Conta",
 	"account.invited_user": "Enviamos um e-mail de convite para {{user}} para ingressar nesta conta",
 	"account.kb-description": "Uma Caixa de Conhecimento é uma coleção de conteúdo que Nuclia pesquisa. Alguns motores de busca chamam isso de “índice” ou “corpus”. Na maioria dos casos, você só precisa de uma Caixa de Conhecimento para sua aplicação.",
-	"account.knowledgeboxes": "Caixas de conhecimento",
+	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Licença",
 	"account.logo": "Imagem da caixa",
 	"account.logotip": "Logotipo",
@@ -61,7 +61,7 @@
 	"account.new_token": "Novo token",
 	"account.nua_client": "Nome do cliente",
 	"account.nua_key_activity": "Registro de atividades da chave NU-API",
-	"account.nua_key_activity_subtitle": "Atividade da caixa de conhecimento dos últimos 30 dias",
+	"account.nua_key_activity_subtitle": "Atividade da Knowledge Box dos últimos 30 dias",
 	"account.nua_key_activity_title": "{{key}} registro de atividades",
 	"account.nua_key_delete": "Excluir chave de API Nuclia Understanding",
 	"account.nua_key_delete_warning": "Ao excluir esta chave, todos os trabalhos em andamento serão perdidos.",
@@ -69,12 +69,12 @@
 	"account.nua_webhook": "URL do Webhook",
 	"account.nua_webhook_help": "Assim que seus dados forem processados, o resultado será postado neste URL",
 	"account.public": "Público",
-	"account.related_kbs": "Caixas de conhecimento da conta",
+	"account.related_kbs": "Knowledge Boxes da conta",
 	"account.replace_config": "Substituir configurações",
 	"account.settings": "Gerenciamento de contas",
 	"account.speech_to_text": "Fala para texto",
 	"account.speech_to_text_description": "Nuclia oferece modelos aprimorados de fala para texto. O uso desses modelos requer mais computação e um custo extra associado. Marque a caixa de seleção a seguir se desejar usar os modelos aprimorados.",
-	"account.stash.add": "Adicionar caixa de conhecimento",
+	"account.stash.add": "Adicionar Knowledge Box",
 	"account.stash.delete": "Excluir",
 	"account.stash.edit": "Edite preferencias",
 	"account.stash.publish": "Publicar",
@@ -112,7 +112,6 @@
 	"activity.processed": "Processado",
 	"activity.resource": "Recurso",
 	"activity.search": "Consultas",
-	"activity.subtitle": "Atividade da caixa de conhecimento dos últimos 30 dias",
 	"activity.timestamp": "Carimbo de hora",
 	"autocomplete.section.main": "Sugestão de conceito-chave",
 	"autocomplete.section.next_words": "Palavras sugeridas",
@@ -201,7 +200,7 @@
 	"billing.quotas.files-up-to": "Arquivos até",
 	"billing.quotas.generative": "Resposta generativa",
 	"billing.quotas.ingestion": "Ingestão",
-	"billing.quotas.kbs": "Número de caixas de conhecimento",
+	"billing.quotas.kbs": "Número de Knowledge Boxes",
 	"billing.quotas.media": "Indexação de vídeo e áudio",
 	"billing.quotas.paragraphs": "Parágrafo armazenado",
 	"billing.quotas.paragraphs_processed": "Número do parágrafo",
@@ -271,7 +270,7 @@
 	"empty.title": "Sem resultados.",
 	"entities.law": "Legal",
 	"entities.quantity": "Quantidades e medidas",
-	"error.creating-kb": "Ocorreu um erro ao criar a Caixa de Conhecimento",
+	"error.creating-kb": "Ocorreu um erro ao criar a Knowledge Box",
 	"error.deleting-resource": "Falha ao excluir o recurso",
 	"error.deleting-resources": "Falha na exclusão de {{count}} recursos",
 	"error.reprocessing-resource": "Falha no reprocessamento do recurso",
@@ -523,7 +522,7 @@
 	"resource.confirm-reprocess.plural-title": "Tem certeza de que deseja reprocessar os recursos?",
 	"resource.confirm-reprocess.title": "Tem certeza de que deseja reprocessar o recurso?",
 	"resource.description.title": "Descrição",
-	"resource.empty": "Não há conteúdo em sua caixa de conhecimento no momento.",
+	"resource.empty": "Não há conteúdo em sua Knowledge Box no momento.",
 	"resource.empty_import": "Comece a usar o Nuclia instantaneamente escolhendo um conjunto de dados de amostra. Esta é a maneira mais rápida de começar e explorar como funciona o Nuclia.",
 	"resource.entities.date": "Encontro",
 	"resource.entities.event": "Eventos",
@@ -652,19 +651,19 @@
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Usar chave própria",
 	"stash.config.success": "As novas configurações foram salvas com sucesso.",
-	"stash.confirm_delete_user.description": "A única maneira de desfazer essa ação é convidá-los novamente para ingressar na sua caixa de conhecimento.",
+	"stash.confirm_delete_user.description": "A única maneira de desfazer essa ação é convidá-los novamente para ingressar na sua Knowledge Box.",
 	"stash.confirm_delete_user.title": "Tem certeza de que deseja excluir este usuário?",
-	"stash.contact_admin": "Você não está autorizado a criar uma caixa de conhecimento. Entre em contato com seu administrador.",
+	"stash.contact_admin": "Você não está autorizado a criar uma Knowledge Box. Entre em contato com seu administrador.",
 	"stash.create.anonymization_model.help": "Aplicar anonimização compatível com o Regulamento Geral de Proteção de Dados (GDPR) a todos os recursos na Caixa de conhecimento",
 	"stash.create.anonymization_model.label": "Anonimização",
-	"stash.create.error": "Algo deu errado ao criar a caixa de conhecimento. Por favor, tente novamente.",
+	"stash.create.error": "Algo deu errado ao criar a Knowledge Box. Por favor, tente novamente.",
 	"stash.create.failure": "Algo está errado no momento. Entre em contato com seu administrador.",
 	"stash.create.generative_model.help": "Indique o modelo utilizado para gerar respostas às dúvidas dos usuários.",
 	"stash.create.generative_model.label": "Geração de resposta",
-	"stash.create.in_progress": "Criação da caixa de conhecimento em andamento…",
+	"stash.create.in_progress": "Criação da Knowledge Box em andamento…",
 	"stash.create.semantic_model.help": "Indique os idiomas utilizados nas informações que você carregará em sua KB.",
 	"stash.create.semantic_model.label": "Línguas",
-	"stash.create.title": "Crie uma caixa de conhecimento",
+	"stash.create.title": "Crie uma Knowledge Box",
 	"stash.create.user_prompts.examples": "Exemplos",
 	"stash.create.user_prompts.prompt": "Solicitação personalizada",
 	"stash.create.user_prompts.prompt_help": "Define a forma como queremos que o sistema atue quando fazemos uma pergunta. Aqui podemos definir regras mais específicas, que podem até substituir o comportamento definido. Por exemplo, poderíamos ter um prompt que fizesse com que o sistema só desse resultados em listas, ou até mesmo pedisse para responder em um determinado idioma.",
@@ -672,48 +671,43 @@
 	"stash.create.user_prompts.system_help": "Define traços gerais de personalidade do assistente, ou sobre como ele deve se comportar ao responder perguntas/durante uma conversa. Por exemplo, poderíamos definir que o sistema responderá como um profissional de saúde.",
 	"stash.create.visual_labeling.help": "Permite selecionar visualmente algumas partes do layout do documento e anotá-las.",
 	"stash.create.visual_labeling.label": "Anotar por seleção",
-	"stash.create.zone_description": "Selecione a zona e o provedor de processamento que você gostaria de usar para esta caixa de conhecimento (o padrão é a zona da conta)",
+	"stash.create.zone_description": "Selecione a zona e o provedor de processamento que você gostaria de usar para esta Knowledge Box (o padrão é a zona da conta)",
 	"stash.create_service_access": "Criar novo acesso ao serviço",
-	"stash.delete.delete": "Excluir caixa de conhecimento?",
-	"stash.delete.error": "Erro ao criar a caixa de conhecimento",
-	"stash.delete.warning": "Se você excluir a Caixa de conhecimento {{ kb }}, todos os dados também serão excluídos",
-	"stash.delete_stash": "Excluir caixa de conhecimento",
-	"stash.delete_stash_data": "Exclua a caixa de conhecimento e todos os dados contidos",
+	"stash.delete.delete": "Excluir Knowledge Box?",
+	"stash.delete.error": "Erro ao criar a Knowledge Box",
+	"stash.delete.warning": "Se você excluir a Knowledge Box {{ kb }}, todos os dados também serão excluídos",
 	"stash.description": "Descrição",
 	"stash.email": "Servidor de e-mail",
-	"stash.empty_kb": "A caixa de conhecimento está vazia",
+	"stash.empty_kb": "A Knowledge Box está vazia",
 	"stash.enable_stash_email": "Ativar e-mail",
 	"stash.home.link": "Painel Inicial",
 	"stash.home.upload-block.description": "Carregar arquivos, pastas, links",
 	"stash.home.upload-block.description-desktop": " ou escolha uma fonte para trabalhar com a Nuclia com seu próprio banco de dados.",
 	"stash.home.upload-block.title": "Trabalhe com seus dados",
-	"stash.invited_user": "Enviamos um e-mail de convite para {{user}} para participar desta caixa de conhecimento.",
-	"stash.kb_name_invalid": "Nome da caixa de conhecimento inválido",
+	"stash.invited_user": "Enviamos um e-mail de convite para {{user}} para participar desta Knowledge Box.",
+	"stash.kb_name_invalid": "Nome da Knowledge Box inválido",
 	"stash.kb_slug_invalid": "Slug da caixa de conhecimento inválido",
 	"stash.logotip": "Logotipo",
 	"stash.manage_users": "Gerenciar usuários",
-	"stash.name": "Nome da caixa de conhecimento",
+	"stash.name": "Nome da Knowledge Box",
 	"stash.name_your_kb": "Nomeie sua base de conhecimento",
 	"stash.new_service_access_token": "Crie um novo token",
-	"stash.no_knowledge_boxes": "Não há caixas de conhecimento nesta conta",
+	"stash.no_knowledge_boxes": "Não há Knowledge Boxes nesta conta",
 	"stash.preferences.receive_help": "Ajuda recebida",
 	"stash.preferences.receiving_emails": "Preferências de Email",
 	"stash.profile": "Definições",
-	"stash.publish.confirm": "Publicar uma caixa de conhecimento significa que ela estará acessível a qualquer pessoa no mundo. Pode ser indexado por motores de busca públicos como o Google.",
+	"stash.publish.confirm": "Publicar uma Knowledge Box significa que ela estará acessível a qualquer pessoa no mundo. Pode ser indexado por motores de busca públicos como o Google.",
 	"stash.publish.error": "Erro ao publicar a Knowledge Box",
-	"stash.publish.publish": "Publicar caixa de conhecimento",
-	"stash.publish.title": "Publicar caixa de conhecimento",
-	"stash.publish.warning": "Se você publicar a Caixa de conhecimento \"{{ kb }}\", todas as informações nela contidas serão públicas.",
-	"stash.retire.error": "Erro ao cancelar a publicação da Caixa de conhecimento",
-	"stash.retire.retire": "Torne a Caixa de Conhecimento privada",
-	"stash.retire.warning": "Se você cancelar a publicação da Caixa de conhecimento \"{{ kb }}\", todas as informações nela contidas se tornarão privadas.",
+	"stash.publish.title": "Publicar Knowledge Box",
+	"stash.publish.warning": "Se você publicar a Knowledge Box \"{{ kb }}\", todas as informações nela contidas serão públicas.",
+	"stash.retire.error": "Erro ao cancelar a publicação da Knowledge Box",
+	"stash.retire.warning": "Se você cancelar a publicação da Knowledge Box \"{{ kb }}\", todas as informações nela contidas se tornarão privadas.",
 	"stash.search": "Procurar",
 	"stash.search-toggle-answer": "Resposta generativa",
 	"stash.search_users": "Adicionar um novo usuário",
 	"stash.search_users_add": "Você realmente deseja adicionar este usuário à conta?",
 	"stash.seats_available": "{{ seats }} assentos disponíveis",
 	"stash.see_stats": "Ver dados",
-	"stash.selectStash": "Selecione uma caixa de conhecimento",
 	"stash.service_access": "Acesso ao serviço",
 	"stash.service_access_description": "Importante! Copie e salve o código do token. Ele desaparecerá depois de adicionado.",
 	"stash.settings.processes.classifier": "Treinamento de intenção de pesquisa de rótulo",
@@ -729,7 +723,7 @@
 	"stash.settings.processes.training.consult-history": "Consulte todos os dados e o status dos treinamentos concluídos ou em andamento",
 	"stash.settings.processes.training.last_run": "Última execução: {{ runDate }}",
 	"stash.settings.processes.training.ner.contact": "Dependendo do seu conjunto de dados, este treinamento pode não ser eficaz. Para avaliar se o treinamento NER é relevante no seu caso, <a href=\"mailto:{{email}}\">entre em contato conosco</a>.",
-	"stash.settings.processes.training.no-resources": "O recurso de treinamento não está disponível em caixas de conhecimento vazias.",
+	"stash.settings.processes.training.no-resources": "O recurso de treinamento não está disponível em Knowledge Boxes vazias.",
 	"stash.settings.processes.training.not-allowed": "O recurso de treinamento não está disponível em contas básicas.",
 	"stash.settings.processes.training.select-entities": "Escolha grupos de entidades",
 	"stash.settings.processes.training.select-labelset": "Escolha um conjunto de rótulos",
@@ -826,8 +820,8 @@
 	"stash.widgets.targetNewTab.help": "Abrir em uma nova guia",
 	"stash.widgets.targetNewTab.label": "Segmentar nova guia",
 	"stash.widgets.title": "Gerador de widget de pesquisa",
-	"stash.widgets.warning": "Para que o widget funcione corretamente, a caixa de conhecimento <strong>deve ser pública</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Zona perigosa! Para que este widget funcione com uma caixa de conhecimento privada, você precisa fornecer um token de API.",
+	"stash.widgets.warning": "Para que o widget funcione corretamente, a Knowledge Box <strong>deve ser pública</strong>.",
+	"stash.widgets.warning-dangerous-snippet": "Zona perigosa! Para que este widget funcione com uma Knowledge Box privada, você precisa fornecer um token de API.",
 	"stash.widgets.warning-dangerous-snippet-details": "Não use este snippet em um site público.",
 	"stats.endpoint": "Endpoint da API NucliaDB",
 	"stats.get_started": "Iniciar",
@@ -886,7 +880,7 @@
 	"upload.toast.successful": "Carregamento bem-sucedido",
 	"upload.upload_from_csv": "Adicione recursos do CSV",
 	"upload.uploading_files": "<strong>Fazendo upload de arquivos.</strong> Enquanto isso, sinta-se à vontade para usar o Nuclia",
-	"upload.use_folder_as_labels.help": "A pasta de primeiro nível é o nome do conjunto de rótulos, as subpastas são rótulos. Se as subpastas estiverem aninhadas, os arquivos receberão vários rótulos. Os rótulos serão criados automaticamente se ainda não estiverem definidos na caixa de conhecimento.",
+	"upload.use_folder_as_labels.help": "A pasta de primeiro nível é o nome do conjunto de rótulos, as subpastas são rótulos. Se as subpastas estiverem aninhadas, os arquivos receberão vários rótulos. Os rótulos serão criados automaticamente se ainda não estiverem definidos na Knowledge Box.",
 	"upload.use_folder_as_labels.label": "Use nomes de pastas como nomes de rótulos",
 	"user.logout": "Sair",
 	"validation.name_required": "Adicione seu nome e sobrenomes",
