--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
 	"account.account_name_invalid": "Invalid account name",
 	"account.accumulated_consumption": "Accumulated daily consumption by feature",
 	"account.active_config": "Active configuration",
-	"account.add_stash": "Add knowledge box",
+	"account.add_stash": "Add Knowledge Box",
 	"account.add_user": "Add user",
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give the administrator role to this user, they will be able to access and edit all options.",
@@ -32,8 +32,8 @@
 	"account.delete_account_confirm_title": "Delete the account?",
 	"account.delete_account_warning_1": "Deleting the account {{account}} will delete all existing data",
 	"account.delete_account_warning_2": "the account, and any configuration data, users and roles assignment",
-	"account.delete_account_warning_3": "any knowledge box and all its data. Including data indexed in NucliaDB",
-	"account.delete_account_warning_4": "any trained model of any knowledge box",
+	"account.delete_account_warning_3": "any Knowledge Box and all its data. Including data indexed in NucliaDB",
+	"account.delete_account_warning_4": "any trained model of any Knowledge Box",
 	"account.delete_user": "Delete user?",
 	"account.delete_user_confirm": "Do you want to delete your user and the access to Nuclia?",
 	"account.delete_user_warning": "Are you sure you want to delete user {{ username }}?",
@@ -61,7 +61,7 @@
 	"account.new_token": "New Token",
 	"account.nua_client": "Client name",
 	"account.nua_key_activity": "NU-API key activity log",
-	"account.nua_key_activity_subtitle": "Last 30 days Knowledge box activity",
+	"account.nua_key_activity_subtitle": "Last 30 days Knowledge Box activity",
 	"account.nua_key_activity_title": "{{key}} activity log",
 	"account.nua_key_delete": "Delete Nuclia Understanding API key",
 	"account.nua_key_delete_warning": "By deleting this key, all the ongoing jobs will be lost.",
@@ -74,7 +74,7 @@
 	"account.settings": "Account management",
 	"account.speech_to_text": "Speech-to-text",
 	"account.speech_to_text_description": "Nuclia offers enhanced speech-to-text models. Using these models require more computation and an associated extra cost. Check the following checkbox if you want to use the enhanced models.",
-	"account.stash.add": "Add knowledge box",
+	"account.stash.add": "Add Knowledge Box",
 	"account.stash.delete": "Delete",
 	"account.stash.edit": "Edit preferences",
 	"account.stash.publish": "Publish",
@@ -112,7 +112,6 @@
 	"activity.processed": "Processed",
 	"activity.resource": "Resource",
 	"activity.search": "Queries",
-	"activity.subtitle": "Last 30 days Knowledge box activity",
 	"activity.timestamp": "Time stamp",
 	"autocomplete.section.main": "Key concept suggestion",
 	"autocomplete.section.next_words": "Suggested words",
@@ -201,7 +200,7 @@
 	"billing.quotas.files-up-to": "Files up to",
 	"billing.quotas.generative": "Generative answer",
 	"billing.quotas.ingestion": "Ingestion",
-	"billing.quotas.kbs": "Number of knowledge boxes",
+	"billing.quotas.kbs": "Number of Knowledge Boxes",
 	"billing.quotas.media": "Video & audio indexing",
 	"billing.quotas.paragraphs": "Paragraph stored",
 	"billing.quotas.paragraphs_processed": "Number of paragraph",
@@ -523,7 +522,7 @@
 	"resource.confirm-reprocess.plural-title": "Are you sure you want to reprocess the resources?",
 	"resource.confirm-reprocess.title": "Are you sure you want to reprocess the resource?",
 	"resource.description.title": "Description",
-	"resource.empty": "There is no content in your knowledge box at the moment.",
+	"resource.empty": "There is no content in your Knowledge Box at the moment.",
 	"resource.empty_import": "Start using Nuclia instantly by picking a sample dataset. This is the fastest way to get started and explore how Nuclia works.",
 	"resource.entities.date": "Date",
 	"resource.entities.event": "Events",
@@ -652,19 +651,19 @@
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Use own key",
 	"stash.config.success": "The new settings have been saved successfully.",
-	"stash.confirm_delete_user.description": "The only way you can undo this action is by inviting them again to join your knowledge box.",
+	"stash.confirm_delete_user.description": "The only way you can undo this action is by inviting them again to join your Knowledge Box.",
 	"stash.confirm_delete_user.title": "Are you sure  you want to delete this user?",
-	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
+	"stash.contact_admin": "You are not authorized to create a Knowledge Box. Contact your administrator.",
 	"stash.create.anonymization_model.help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all resources in the Knowledge Box",
 	"stash.create.anonymization_model.label": "Anonymization ",
-	"stash.create.error": "Something went wrong when creating the knowledge box. Please try again.",
+	"stash.create.error": "Something went wrong when creating the Knowledge Box. Please try again.",
 	"stash.create.failure": "Something is wrong at the moment. Contact your administrator.",
 	"stash.create.generative_model.help": "Indicate the model used to generate answers to user questions.",
 	"stash.create.generative_model.label": "Answer generation",
-	"stash.create.in_progress": "Knowledge box creation in progress…",
+	"stash.create.in_progress": "Knowledge Box creation in progress…",
 	"stash.create.semantic_model.help": "Indicate the languages used in the information you will upload in your KB.",
 	"stash.create.semantic_model.label": "Languages",
-	"stash.create.title": "Create a knowledge box",
+	"stash.create.title": "Create a Knowledge Box",
 	"stash.create.user_prompts.examples": "Examples",
 	"stash.create.user_prompts.prompt": "Custom prompt",
 	"stash.create.user_prompts.prompt_help": "Defines the way we want the system to act when we ask a question. Here we can define more specific rules, that could even override the defined behavior. For example, we could have a prompt that makes the system only give results in lists, or even ask to answer in a given language.",
@@ -672,40 +671,36 @@
 	"stash.create.user_prompts.system_help": "Defines general personality traits of the assistant, or about how it should behave when answering questions/ during a conversation. For example, we could define that the system will answer as a health professional.",
 	"stash.create.visual_labeling.help": "Allow to visually select some parts of the document layout and annotate them.",
 	"stash.create.visual_labeling.label": "Annotate by selection",
-	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this knowledge box (defaults to the account’s zone)",
+	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this Knowledge Box (defaults to the account’s zone)",
 	"stash.create_service_access": "Create new Service Access",
-	"stash.delete.delete": "Delete knowledge box?",
-	"stash.delete.error": "Error when creating the knowledge box",
+	"stash.delete.delete": "Delete Knowledge Box?",
+	"stash.delete.error": "Error when creating the Knowledge Box",
 	"stash.delete.warning": "If you delete the Knowledge Box {{ kb }}, all data will also be deleted",
-	"stash.delete_stash": "Delete knowledge box",
-	"stash.delete_stash_data": "Delete the knowledge box and all the contained data",
 	"stash.description": "Description",
 	"stash.email": "Email server",
-	"stash.empty_kb": "The knowledge box is empty",
+	"stash.empty_kb": "The Knowledge Box is empty",
 	"stash.enable_stash_email": "Enable email",
 	"stash.home.link": "Home dashboard",
 	"stash.home.upload-block.description": "Upload files, folders, links",
 	"stash.home.upload-block.description-desktop": " or choose a source to work with Nuclia with your own database.",
 	"stash.home.upload-block.title": "Work with your data",
-	"stash.invited_user": "We have sent an invitation email to {{user}} to join this knowledge box. ",
-	"stash.kb_name_invalid": "Invalid knowledge box name",
+	"stash.invited_user": "We have sent an invitation email to {{user}} to join this Knowledge Box. ",
+	"stash.kb_name_invalid": "Invalid Knowledge Box name",
 	"stash.kb_slug_invalid": "Invalid knowledge box slug",
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Manage users",
 	"stash.name": "Knowledge Box name",
 	"stash.name_your_kb": "Name your KB",
 	"stash.new_service_access_token": "Create a new token",
-	"stash.no_knowledge_boxes": "There are no knowledge boxes in this account",
+	"stash.no_knowledge_boxes": "There are no Knowledge Boxes in this account",
 	"stash.preferences.receive_help": "Received help",
 	"stash.preferences.receiving_emails": "Email preferences",
 	"stash.profile": "Settings",
-	"stash.publish.confirm": "Publishing a knowledge box means it will be accessible to anyone in the world.  It  might be indexed by public search engines such as Google.",
+	"stash.publish.confirm": "Publishing a Knowledge Box means it will be accessible to anyone in the world.  It  might be indexed by public search engines such as Google.",
 	"stash.publish.error": "Error when publishing the Knowledge Box",
-	"stash.publish.publish": "Publish Knowledge Box",
-	"stash.publish.title": "Publish knowledge box",
+	"stash.publish.title": "Publish Knowledge Box",
 	"stash.publish.warning": "If you publish the \"{{ kb }}\" Knowledge Box, all the information in it will be public.",
 	"stash.retire.error": "Error when unpublishing the Knowledge Box",
-	"stash.retire.retire": "Make the Knowledge Box private",
 	"stash.retire.warning": "If you unpublish the \"{{ kb }}\" Knowledge Box, all the information in it will become private.",
 	"stash.search": "Search",
 	"stash.search-toggle-answer": "Generative answer",
@@ -713,7 +708,6 @@
 	"stash.search_users_add": "Do you really want to add this user to the account? ",
 	"stash.seats_available": "{{ seats }} seats available",
 	"stash.see_stats": "See data",
-	"stash.selectStash": "Select a knowledge box",
 	"stash.service_access": "Service Access",
 	"stash.service_access_description": "Important! Copy and save the Token code. It will disappear once added.",
 	"stash.settings.processes.classifier": "Label search intent training",
@@ -729,7 +723,7 @@
 	"stash.settings.processes.training.consult-history": "Consult all the data and the status of the trainings completed or in progress",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
 	"stash.settings.processes.training.ner.contact": "Depending on your dataset, this training might not be effective. In order to assess if NER training is relevant in your case, please <a href=\"mailto:{{email}}\">contact us</a>.",
-	"stash.settings.processes.training.no-resources": "The training feature is not available on empty knowledge boxes.",
+	"stash.settings.processes.training.no-resources": "The training feature is not available on empty Knowledge Boxes.",
 	"stash.settings.processes.training.not-allowed": "The training feature is not available on basic accounts.",
 	"stash.settings.processes.training.select-entities": "Choose entity groups",
 	"stash.settings.processes.training.select-labelset": "Choose one label set",
@@ -826,8 +820,8 @@
 	"stash.widgets.targetNewTab.help": "Open in a new tab",
 	"stash.widgets.targetNewTab.label": "Target new tab",
 	"stash.widgets.title": "Search widget generator",
-	"stash.widgets.warning": "In order for the widget to work properly, the <strong>knowledge box must be public</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Dangerous zone! For this widget to work with a private knowledge box you need to provide an API token.",
+	"stash.widgets.warning": "In order for the widget to work properly, the <strong>Knowledge Box must be public</strong>.",
+	"stash.widgets.warning-dangerous-snippet": "Dangerous zone! For this widget to work with a private Knowledge Box you need to provide an API token.",
 	"stash.widgets.warning-dangerous-snippet-details": "Don't use this snippet on a public website.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Get started",
@@ -886,7 +880,7 @@
 	"upload.toast.successful": "Upload successful",
 	"upload.upload_from_csv": "Add resources from CSV",
 	"upload.uploading_files": "<strong>Uploading files.</strong> Feel free to use Nuclia in the meantime",
-	"upload.use_folder_as_labels.help": "First-level folder is the label set name, subfolders are labels. If subfolders are nested, files will get multiple labels. Labels will be created automatically if they are not defined in the knowledge box yet.",
+	"upload.use_folder_as_labels.help": "First-level folder is the label set name, subfolders are labels. If subfolders are nested, files will get multiple labels. Labels will be created automatically if they are not defined in the Knowledge Box yet.",
 	"upload.use_folder_as_labels.label": "Use folder names as label names",
 	"user.logout": "Log out",
 	"validation.name_required": "Add your name and surnames",
